--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -42,7 +42,7 @@
                     <div>
                         <h2 class="mb-3"><%= product.productTitle %></h2>
                         <p class="mb-3"> <%= product.productDescription %></p>
-                        <h3 class="mb-3">$ <%= product.productPrice %></h3>
+                        <h3 class="mb-3"><span>&#8377</span> <%= product.productPrice %></h3>
                        <span class="text-secondary"> <p>Category :  <%= product.category %></p></span>
                        <div class="mb-3">
                         <label for="quantity" class="mb-2 d-block">Quantity:</label>
