--- a/views/partials/adminDashboard.ejs
+++ b/views/partials/adminDashboard.ejs
@@ -27,7 +27,7 @@
       <div class="card shadow" style="background-color: #FDD393;">
         <div class="card-body text-center">
           <h5 class="card-title">Total Sales</h5>
-          <p class="card-text">$ <%= totalSales %></p>
+          <p class="card-text"><span>&#8377</span> <%= totalSales %></p>
         </div>
       </div>
     </div>
