--- a/views/partials/products.ejs
+++ b/views/partials/products.ejs
@@ -18,7 +18,7 @@
             <div class="tag bg-info text-light"> Offer - <%= product.offers[0].discountPercentage %>% off</div>
           <% } %>
           <div class="title pt-4 pb-1"><%= product.productTitle %></div>
-          <div class="price">$ <%= product.productPrice %>.0</div>
+          <div class="price"><span>&#8377</span> <%= product.productPrice %>.0</div>
       </div>
     <% }); %>
   </div>
