--- a/views/partials/userWallet.ejs
+++ b/views/partials/userWallet.ejs
@@ -7,7 +7,7 @@
         <div>
           <h6 class="">Balance:</h6>
         </div>
-       <h1 class="d-flex ml-auto mr-5 pb-3"> <strong>$<%= balanceValue %></strong></h1>
+       <h1 class="d-flex ml-auto mr-5 pb-3"> <strong><span>&#8377</span> <%= balanceValue %></strong></h1>
 
       </div>
       <div class="d-grid gap-2">
