--- a/views/pages/checkout.ejs
+++ b/views/pages/checkout.ejs
@@ -192,7 +192,7 @@
                   <div id="credit-card" class="tab-pane fade show active">
                     <form role="form">
                        <!-- Display the wallet balance -->
-                       <p>Wallet Balance: $<span id="walletBalance"><%= walletBalance %></span></p>
+                       <p>Wallet Balance: ₹<span id="walletBalance"><%= walletBalance %></span></p>
                         <div class="form-group">
                             <label for="useWallet">Use Wallet Balance:</label>
                             <input type="radio" id="useWallet" name="useWallet" value="yes"> Yes
@@ -236,11 +236,11 @@
               </div>
               <div class="mb-3">
                 <input type="radio" class="shipping" name="shipping" id="checkoutExpressShipping" value="express">
-                <label for="checkoutExpressShipping" class="ml-2">Express Shipping (+$15)</label>
+                <label for="checkoutExpressShipping" class="ml-2">Express Shipping (+15)</label>
               </div>
               <div class="d-flex flex-row justify-content-between mb-2">
                 <p class="mb-0">Subtotal</p>
-                <p class="mb-0" id="checkoutSubTotal">$0.00</p>
+                <p class="mb-0" id="checkoutSubTotal">₹0.00</p>
               </div>
               <div class="d-flex flex-row justify-content-between mb-2">
                 <p class="mb-0 text-danger">Total Discount</p>
@@ -248,7 +248,7 @@
               </div>
               <div class="d-flex flex-row justify-content-between mb-3">
                 <p class="mb-0">Total</p>
-                <p class="mb-0" id="checkoutTotal">$0.00</p>
+                <p class="mb-0" id="checkoutTotal">₹0.00</p>
               </div>
             </div>
 
@@ -286,11 +286,11 @@
                     <% const discountPercentage = cartItem.product.offers[0].discountPercentage; %>
                     <% const subtotal = (cartItem.quantity * cartItem.product.productPrice).toFixed(2); %>
                     <% const discountAmount = (subtotal * (discountPercentage / 100)).toFixed(2); %>
-                    <div class="price text-muted dataSubtotal">Total: $<%= subtotal %></div>
-                    <div class="price text-muted dataDiscount">Discount: $<%= discountAmount %></div>
-                    <div class="price text-muted ">Subtotal: $<%= (subtotal - discountAmount).toFixed(2) %></div>
+                    <div class="price text-muted dataSubtotal">Total: ₹<%= subtotal %></div>
+                    <div class="price text-muted dataDiscount">Discount: ₹<%= discountAmount %></div>
+                    <div class="price text-muted ">Subtotal: ₹<%= (subtotal - discountAmount).toFixed(2) %></div>
                   <% } else { %>
-                    <div class="price text-muted dataSubtotal">Total: $<%= (cartItem.quantity * cartItem.product.productPrice).toFixed(2) %></div>
+                    <div class="price text-muted dataSubtotal">Total: ₹<%= (cartItem.quantity * cartItem.product.productPrice).toFixed(2) %></div>
                   <% } %>
                   
                 </div>
