--- a/views/partials/newArrivals.ejs
+++ b/views/partials/newArrivals.ejs
@@ -15,7 +15,7 @@
                             <h3 class="post-title mt-3">
                               <a href="#"><%= product.productTitle %></a>
                             </h3>
-                            <span class="post-date">$ <%= product.productPrice %></span>
+                            <span class="post-date"><span>&#8377</span> <%= product.productPrice %></span>
                           </div>
                           <div class="ml-auto">
                             <button type="button" class="btn btn-dark newArrivalsAddToCartBtn"  data-product-id="<%= product._id %>" >Add to cart</button>
