--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -9,7 +9,8 @@
     <body>
       <div id="main">
         <div class="fof">
-              <h1>Error 404</h1>
+            <h1>Error 404</h1><br>
+            <a href="/" class="pt-5">Back to home Page</a>
         </div>
   </div>
 </html>
