--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -7,11 +7,11 @@
      
       <div class="container">
         <div class="d-flex mt-5">
-          <div class="flex-shrink-0" style="width: 47.6875rem; height: 12.0625rem;">
-            <p class="text-black-900" style="font-family: 'Space Grotesk'; font-size: 4rem; font-weight: 500; line-height: 4.75rem; letter-spacing: -0.125rem;"><%= bannerTitle %></p>
+          <div class="flex-shrink-0 col-md-6">
+            <p class="text-black-900 mt-3" style="font-family: 'Space Grotesk'; font-size: 4rem; font-weight: 500; line-height: 4.75rem; letter-spacing: -0.125rem;"><%= bannerTitle %></p>
           </div>
         </div>
-        
+
           <%- include('../partials/homeCarousel');%>
              
       </div>
@@ -24,13 +24,14 @@
         <div class="col-md-12 d-flex flex-column custom-heading">
        </div>
 
-        <div class="d-flex justify-content-center">
-          <div class="flex-shrink-0" style="width: 47.6875rem;">
-            <p class="d-flex justify-content-center">FEATURED</p>
-            <p class="d-flex ml-5 text-black-900" style="font-family: 'Space Grotesk'; font-size: 4rem; font-weight: 500; line-height: 4.75rem; letter-spacing: -0.125rem;"><%= featuredTitle %></p>
-            <p class="d-flex justify-content-center">At vero eos et accusamus et iusto odio dignissimos <br> ducimus qui blanditiis praesentium voluptatum.</p>
-          </div>
+       <div class="d-flex justify-content-center">
+        <div class="flex-shrink-0 col-md-8 text-center">
+          <p class="mb-0">FEATURED</p>
+          <p class="text-black-900" style="font-family: 'Space Grotesk'; font-size: 4rem; font-weight: 500; line-height: 4.75rem; letter-spacing: -0.125rem;"><%= featuredTitle %></p>
+          <p class="mb-0">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</p>
         </div>
+      </div>
+      
 
     </div>
      
