--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -9,13 +9,13 @@
     <form action="/signup" id="SignUpForm" method="POST" class="bg-light w-100 p-5 text-dark rounded" style="max-width: 450px;">
       <h2 class="text-center fw-bold mb-4" style="font-family: 'Poppins', sans-serif;"><b>Sign Up to Planet</b></h2>
 
-      <div class="mb-4">
+      <!-- <div class="mb-4">
         <button type="button" name="" id="googlebutton" class="btn btn-lg btn-block btn-outline-secondary">
           Sign Up with Google
         </button>
       </div>
 
-      <p class="text-center text-secondary mb-4">or</p>
+      <p class="text-center text-secondary mb-4">or</p> -->
 
       <div class="mb-4">
         <input type="text" name="name" id="nameSignup" placeholder="Name" class="form-control form-control-lg" />
