--- a/views/partials/footerSection.ejs
+++ b/views/partials/footerSection.ejs
@@ -16,13 +16,8 @@
           <div class="col-md-4">
               <ul class="list-inline social-buttons">
                   <li class="list-inline-item">
-                      <a href="#">
-                          <i class="fab fa-twitter"></i>
-                      </a>
-                  </li>
-                  <li class="list-inline-item">
-                      <a href="#">
-                          <i class="fab fa-facebook-f"></i>
+                      <a href="https://github.com/george-j00">
+                        <i class="fa-brands fa-github"></i>
                       </a>
                   </li>
                   <li class="list-inline-item">
